--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://henriquebelias.github.io/exercise-pokedex-router/",
   "name": "pokedex",
   "version": "0.1.0",
   "private": true,
